fix: keep WB barcode and KIZ together on each FBO label